--- a/ajax/ajax.html
+++ b/ajax/ajax.html
@@ -8,6 +8,7 @@
 
 <body>
     <script type="text/javascript">
+        // 原声ajax方法
         function ajax(opt) {
             opt = opt || {};
             opt.method = opt.method.toUpperCase() || 'POST';
